--- a/SocialMed.API/SocialMed.API.csproj
+++ b/SocialMed.API/SocialMed.API.csproj
@@ -7,12 +7,15 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="11.0.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0-preview.4.22229.2" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.0-preview.4.22229.2" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational.Design" Version="2.0.0-preview1-final" />
+        <PackageReference Include="MySql.EntityFrameworkCore" Version="6.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Shared\Domain\Services\Comunication" />
-      <Folder Include="Shared\Extensions" />
       <Folder Include="SocialMedCenter\Controllers" />
       <Folder Include="SocialMedCenter\Domain\Models" />
       <Folder Include="SocialMedCenter\Domain\Repositories" />
